Fixing bug 131311. Making window.scrollX and .scrollY replaceable for backwards compatibility. r=hidday@geocities.com, sr=jband@netscape.com, a=dbaron@fas.harvard.edu